@@ -1,0 +1,48 @@
+/**
+ * Copyright 2008 The Apache Software Foundation
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.hadoop.hbase.client;
+
+import java.io.IOException; 
+import java.util.List;
+import org.apache.hadoop.io.Text;
+
+/** 
+ * Exception thrown by HTable methods when an attempt to do something (like
+ * commit changes) fails after a bunch of retries. 
+ */ 
+public class RetriesExhaustedException extends IOException {
+  /** 
+   * Create a new RetriesExhaustedException from the list of prior failures.
+   * @param row The row we were pursuing when we ran out of retries
+   * @param numTries The number of tries we made
+   * @param exceptions List of exceptions that failed before giving up
+   */ 
+  public RetriesExhaustedException(Text row, int numTries, 
+    List<Exception> exceptions) {
+    super(getMessage(row, numTries, exceptions));
+  }
+  
+  private static String getMessage(Text row, int numTries, 
+    List<Exception> exceptions) {
+    String buffer = "Trying to contact region server for row '" + 
+      row + "', but failed after " + (numTries + 1)  + " attempts.\nExceptions:\n";
+
+    for (Exception e : exceptions) {
+      buffer += e.toString() + "\n";
+    }
+    return buffer;
+  }
+}
